using System.Collections;
using System.Collections.Generic;
using UnityEngine;



public class Axis
{
    public const string VERTICAL_AXIS = "Vertical";
    public const string Horijontal_AXIS = "Horizontal";


}

public class AnimationTags
{
    public const string Walk_Parameter= "Walk";
    public const string Defence_Parameter= "Defence";
    public const string Attack1_Trigger = "Attack1";
    public const string Attack2_Trigger = "Attack2";
}